# pdf-toolkit

./: .eslintrc.json  .prettierrc  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics_commands.rs  file_commands.rs  history_commands.rs  mod.rs  ocr_commands.rs  pdf_commands.rs  queue_commands.rs  settings_commands.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/models/: history.rs  job.rs  mod.rs  recent_file.rs  settings.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/pdf/: compress.rs  convert.rs  merge.rs  mod.rs  organize.rs  repair.rs  rotate.rs  security.rs  split.rs
src/app/: AboutPage.tsx  DashboardPage.tsx  HistoryPage.tsx  SettingsPage.tsx
src/layouts/: Header.tsx  MainLayout.tsx  Sidebar.tsx  StatusBar.tsx
src/modules/batch/: BatchProcessPage.tsx
src/modules/compress-pdf/: CompressPDFPage.tsx
src/modules/convert-pdf/: ConvertFromPDFPage.tsx  ConvertToPDFPage.tsx
src/modules/edit/: EditPDFPage.tsx  FormFillPage.tsx
src/modules/merge-pdf/: MergePDFPage.tsx
src/modules/ocr/: OCRPage.tsx
src/modules/organize/: ExtractPagesPDFPage.tsx  RemovePagesPDFPage.tsx  ReorderPDFPage.tsx  RepairPDFPage.tsx  RotatePDFPage.tsx
src/modules/security/: MetadataEditorPage.tsx  PasswordProtectPage.tsx  SignaturePage.tsx  UnlockPDFPage.tsx  WatermarkPage.tsx
src/modules/split-pdf/: SplitPDFPage.tsx
src/styles/: globals.css
(+21 files in other folders)
