[package]
name = "pdftoolkit"
version = "1.0.0"
description = "PDFToolKit — Offline Desktop PDF Suite"
authors = ["PDFToolKit Dev"]
edition = "2021"

[lib]
name = "pdftoolkit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"

serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
rusqlite            = { version = "0.31", features = ["bundled"] }
chrono              = { version = "0.4",  features = ["serde"] }
thiserror           = "1"
uuid                = { version = "1",    features = ["v4"] }
log                 = "0.4"
env_logger          = "0.11"
rayon               = "1.10"
tempfile            = "3"

# PDF processing crates
lopdf               = "0.33"
printpdf            = { version = "0.7", features = ["embedded_images"] }
image               = { version = "0.24.3", features = ["png", "jpeg", "bmp", "tiff"] }

[profile.release]
opt-level    = "s"
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
